    - Added a search bar to the recipe picker
  Changes:
    - Updated to a newer version of flib (v0.4.1)
    - Various minor UI improvements unrelated to the main interface redesign
  Bugfixes:
    - Fixed that changing the limit on a machine would reset the 'hard limit'-switch

---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 17. 08. 2020
  Features:
    - Added a 'request items'-button to the utility dialog that requests all the items needed to build the current subfactory/floor. The buttons indicating what is in your inventory are now also updated dynamically when your inventory content changes.
  Changes:
    - Re-added the keyboard shortcut to confirm modal dialogs by pressing 'Enter'
    - Properly enabled rate limiting again to avoid duplicate GUI actions
    - Improved performance when opening the preferences dialog
  Bugfixes:
    - Fixed that the product picker would sometimes show a scrollbar unnecessarily

---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 15. 08. 2020
  Bugfixes:
    - Fixed a potential crash on-load when playing on older maps

---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 15. 08. 2020
  Changes:
    - Adjusted styling in some places
    - Updated the screenshots to reflect the recent redesigns
  Bugfixes:
    - Fixed a crash when trying to edit a subfactory without an icon

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 14. 08. 2020
  Changes:
    - Updated for Factorio 1.0; Happy release day everyone!🥳 It's been a great time working on this mod and interacting with all of you. There's a write-up about these past many months in the mod portal discussions and on Discord, if you're interested in reading about some numbers and feelings.
